Update spcecification with results, assajos and admin
